--- a/src/dashboard/src/devine_dashboard/html/dashboard/subscribers/dialog.html
+++ b/src/dashboard/src/devine_dashboard/html/dashboard/subscribers/dialog.html
@@ -1,12 +1,12 @@
 <div class="card border-warning mb-3">
     <h3 class="card-header">
-        Snips
+        Dialog Control
     </h3>
     <ul class="list-group list-group-flush mt-0">
         <li class="list-group-item">
             <div class="custom-control custom-checkbox">
-                <input class="custom-control-input" id="snips_checkbox" checked="" type="checkbox">
-                <label class="custom-control-label" for="snips_checkbox">Subscribe</label>
+                <input class="custom-control-input" id="dialog_checkbox" checked="" type="checkbox">
+                <label class="custom-control-label" for="dialog_checkbox">Subscribe</label>
             </div>
         </li>
     </ul>
