Added a threshold to the image segmentation and fixed the dashboard for the image_dispatcher node

--- a/src/dashboard/src/devine_dashboard/html/dashboard/subscribers/kinect.html
+++ b/src/dashboard/src/devine_dashboard/html/dashboard/subscribers/kinect.html
@@ -10,16 +10,16 @@
   <div class="card-body">
     <b class="text-info">Subscriptions:</b>
       <div class="custom-control custom-checkbox">
-        <input class="custom-control-input" id="camera_checkbox" checked="" type="checkbox">
-        <label class="custom-control-label" for="camera_checkbox">Camera</label>
+        <input class="custom-control-input" id="raw_camera" value="raw_camera" checked="checked" name="image_selection" type="radio">
+        <label class="custom-control-label" for="raw_camera">Camera</label>
       </div>
       <div class="custom-control custom-checkbox">
-        <input class="custom-control-input" id="segmentation_checkbox" checked="" type="checkbox">
-        <label class="custom-control-label" for="segmentation_checkbox">Segmentation</label>
+        <input class="custom-control-input" id="segmentation" value="segmentation" name="image_selection" type="radio">
+        <label class="custom-control-label" for="segmentation">Segmentation</label>
       </div>
       <div class="custom-control custom-checkbox">
-        <input class="custom-control-input" id="body_tracking_checkbox" checked="" type="checkbox">
-        <label class="custom-control-label" for="body_tracking_checkbox">Body tracking</label>
+        <input class="custom-control-input" id="body_tracking" value="body_tracking" name="image_selection" type="radio">
+        <label class="custom-control-label" for="body_tracking">Body tracking</label>
       </div>
   </div>
 
