Added zone detection in the dashboard and optimized for demo (#84)

--- a/src/dashboard/src/devine_dashboard/html/dashboard/subscribers/kinect.html
+++ b/src/dashboard/src/devine_dashboard/html/dashboard/subscribers/kinect.html
@@ -21,6 +21,10 @@
         <input class="custom-control-input" id="body_tracking" value="body_tracking" name="image_selection" type="radio">
         <label class="custom-control-label" for="body_tracking">Body tracking</label>
       </div>
+      <div class="custom-control custom-checkbox">
+        <input class="custom-control-input" id="zone_detection" value="zone_detection" name="image_selection" type="radio">
+        <label class="custom-control-label" for="zone_detection">Zone detection</label>
+      </div>
   </div>
 
 
