Answer tts from dashboard
Signed-off-by: Felix Martel-Denis <lixtelnis@gmail.com>

--- a/src/dashboard/src/devine_dashboard/html/dashboard/publisher.html
+++ b/src/dashboard/src/devine_dashboard/html/dashboard/publisher.html
@@ -21,7 +21,7 @@
                         <div role="separator" class="dropdown-divider all-topics"></div>
                     </div>
                 </div>
-                <input id="publisher_topic" placeholder="/question" type="text" class="form-control" style="border: none;">
+                <input id="publisher_topic" placeholder="/devine/player_name" type="text" class="form-control" style="border: none;">
             </div>
         </li>
         <li class="list-group-item">
@@ -29,7 +29,7 @@
                 <div class="input-group-prepend">
                     <div class="input-group-text">Message</div>
                 </div>
-                <input id="publisher_message" placeholder="Is it on the right?" type="text" class="form-control" style="border: none;">
+                <input id="publisher_message" placeholder="you" type="text" class="form-control" style="border: none;">
                 <div class="input-group-append">
                     <button id="publisher_publish" type="button" class="btn btn-primary">Publish</button>
                 </div>
