Remove french words from dashboard
Signed-off-by: Felix Martel-Denis <lixtelnis@gmail.com>

--- a/src/dashboard/src/devine_dashboard/html/dashboard/subscribers/image_dispatcher.html
+++ b/src/dashboard/src/devine_dashboard/html/dashboard/subscribers/image_dispatcher.html
@@ -5,9 +5,9 @@
     <ul class="list-group list-group-flush mt-0">
         <li class="list-group-item">
             <div class="custom-control custom-checkbox">
-                <button id="dispatch_segm" type="button" class="btn btn-sm" style="margin:5px">Segmenter</button>
-                <button id="dispatch_fea" type="button" class="btn btn-sm" style="margin:5px">Extraire features</button>
-                <button id="dispatch_body" type="button" class="btn btn-sm" style="margin:5px">Body track</button>
+                <button id="dispatch_segm" type="button" class="btn btn-sm" style="margin:5px">Segment</button>
+                <button id="dispatch_fea" type="button" class="btn btn-sm" style="margin:5px">Extract features</button>
+                <button id="dispatch_body" type="button" class="btn btn-sm" style="margin:5px">Track bodies</button>
             </div>
         </li>
     </ul>
