--- a/src/dashboard/src/devine_dashboard/html/dashboard/subscribers/kinect.html
+++ b/src/dashboard/src/devine_dashboard/html/dashboard/subscribers/kinect.html
@@ -9,24 +9,24 @@
   </h3>
   <div class="card-body">
     <b class="text-info">Subscriptions:</b>
-      <div class="custom-control custom-checkbox">
-        <input class="custom-control-input" id="raw_camera" value="raw_camera" checked="checked" name="image_selection" type="radio">
-        <label class="custom-control-label" for="raw_camera">Camera</label>
-      </div>
-      <div class="custom-control custom-checkbox">
-        <input class="custom-control-input" id="segmentation" value="segmentation" name="image_selection" type="radio">
-        <label class="custom-control-label" for="segmentation">Segmentation</label>
-      </div>
-      <div class="custom-control custom-checkbox">
-        <input class="custom-control-input" id="body_tracking" value="body_tracking" name="image_selection" type="radio">
-        <label class="custom-control-label" for="body_tracking">Body tracking</label>
-      </div>
-      <div class="custom-control custom-checkbox">
-        <input class="custom-control-input" id="zone_detection" value="zone_detection" name="image_selection" type="radio">
-        <label class="custom-control-label" for="zone_detection">Zone detection</label>
-      </div>
+    <div class="custom-control custom-checkbox">
+      <input class="custom-control-input" id="raw_camera" value="raw_camera" checked="checked" name="image_selection"
+        type="radio">
+      <label class="custom-control-label" for="raw_camera">Camera</label>
+    </div>
+    <div class="custom-control custom-checkbox">
+      <input class="custom-control-input" id="segmentation" value="segmentation" name="image_selection" type="radio">
+      <label class="custom-control-label" for="segmentation">Segmentation</label>
+    </div>
+    <div class="custom-control custom-checkbox">
+      <input class="custom-control-input" id="body_tracking" value="body_tracking" name="image_selection" type="radio">
+      <label class="custom-control-label" for="body_tracking">Body tracking</label>
+    </div>
+    <div class="custom-control custom-checkbox">
+      <input class="custom-control-input" id="zone_detection" value="zone_detection" name="image_selection" type="radio">
+      <label class="custom-control-label" for="zone_detection">Zone detection</label>
+    </div>
   </div>
-
 
   <canvas id="kinect_image" style="max-width:none" width="640" height="480"></canvas>
 
