--- a/src/dashboard/src/devine_dashboard/html/dashboard/subscribers/kinect.html
+++ b/src/dashboard/src/devine_dashboard/html/dashboard/subscribers/kinect.html
@@ -10,21 +10,21 @@
   <div class="card-body">
     <b class="text-info">Subscriptions:</b>
     <div class="custom-control custom-checkbox">
-      <input class="custom-control-input" id="raw_camera" value="raw_camera" checked="checked" name="image_selection"
+      <input class="custom-control-input" id="image_raw" value="image_raw" checked="checked" name="image_selection"
         type="radio">
-      <label class="custom-control-label" for="raw_camera">Camera</label>
+      <label class="custom-control-label" for="image_raw">Camera</label>
     </div>
     <div class="custom-control custom-checkbox">
-      <input class="custom-control-input" id="segmentation" value="segmentation" name="image_selection" type="radio">
-      <label class="custom-control-label" for="segmentation">Segmentation</label>
+      <input class="custom-control-input" id="segmentation_image" value="segmentation_image" name="image_selection" type="radio">
+      <label class="custom-control-label" for="segmentation_image">Segmentation</label>
     </div>
     <div class="custom-control custom-checkbox">
-      <input class="custom-control-input" id="body_tracking" value="body_tracking" name="image_selection" type="radio">
-      <label class="custom-control-label" for="body_tracking">Body tracking</label>
+      <input class="custom-control-input" id="body_tracking_image" value="body_tracking_image" name="image_selection" type="radio">
+      <label class="custom-control-label" for="body_tracking_image">Body tracking</label>
     </div>
     <div class="custom-control custom-checkbox">
-      <input class="custom-control-input" id="zone_detection" value="zone_detection" name="image_selection" type="radio">
-      <label class="custom-control-label" for="zone_detection">Zone detection</label>
+      <input class="custom-control-input" id="zone_detection_image" value="zone_detection_image" name="image_selection" type="radio">
+      <label class="custom-control-label" for="zone_detection_image">Zone detection</label>
     </div>
   </div>
 
