Dispatch all in dashboard
Signed-off-by: Felix Martel-Denis <lixtelnis@gmail.com>

--- a/src/dashboard/src/devine_dashboard/html/dashboard/subscribers/image_dispatcher.html
+++ b/src/dashboard/src/devine_dashboard/html/dashboard/subscribers/image_dispatcher.html
@@ -8,6 +8,7 @@
                 <button id="dispatch_segm" type="button" class="btn btn-sm" style="margin:5px">Segment</button>
                 <button id="dispatch_fea" type="button" class="btn btn-sm" style="margin:5px">Extract features</button>
                 <button id="dispatch_body" type="button" class="btn btn-sm" style="margin:5px">Track bodies</button>
+                <button id="dispatch_all" type="button" class="btn btn-sm" style="margin:5px">All</button>
             </div>
         </li>
     </ul>
