Fixed tts answer field in dashboard
+ Better console.

--- a/src/dashboard/src/devine_dashboard/html/dashboard/subscribers/dialog.html
+++ b/src/dashboard/src/devine_dashboard/html/dashboard/subscribers/dialog.html
@@ -8,7 +8,7 @@
                 <div class="input-group-prepend">
                     <div class="input-group-text">Answer</div>
                 </div>
-                <input id="dialog_answer" placeholder="yes|no|na" type="text" class="form-control" style="border: none;">
+                <input id="dialog_answer" placeholder="yes, no, na, name, etc." type="text" class="form-control" style="border: none;">
                 <div class="input-group-append">
                     <button id="dialog_publish" type="button" class="btn btn-primary">Publish</button>
                 </div>
