--- a/src/dashboard/src/devine_dashboard/html/dashboard/console.html
+++ b/src/dashboard/src/devine_dashboard/html/dashboard/console.html
@@ -4,7 +4,7 @@
         <button id="clear_console" type="button" class="btn btn-secondary float-right">Clear</button>
         <button id="reconnect_to_ros" type="button" class="btn btn-primary float-right" style="display: none;">Reconnect</button>
     </h3>
-    <div class="card-body">
-        <pre id="console" class="mb-0"></pre>
+    <div class="card-body no-padding">
+        <pre id="console" class="mb-0 with-padding"></pre>
     </div>
 </div>
