Demo dashboard first draft.

--- a/src/dashboard/src/devine_dashboard/html/index.html
+++ b/src/dashboard/src/devine_dashboard/html/index.html
@@ -12,7 +12,9 @@
 
 <body>
   <div class="container-fluid">
-    {% if path == "index" %}
+    {% if path == "index" or path == "demo" %}
+      {% include 'demo/demo.html' %} 
+    {% elif path == "debug" %}
       {% include 'dashboard/dashboard.html' %} 
     {% elif path == "scoreboard" %}
       {% include 'scoreboard/scoreboard.html' %} 
