--- a/src/dashboard/src/devine_dashboard/html/macros/camera_feed.html
+++ b/src/dashboard/src/devine_dashboard/html/macros/camera_feed.html
@@ -1,12 +1,19 @@
-<div class="card mb-3 border-info">
+{% macro camera(title, id, showOptions=false) -%}
+
+<div class="camera card mb-3 border-info">
   <h3 class="card-header">
-    <span>Kinect Camera</span>
+    <span>{{ title }}</span>
+
+    {% if showOptions %}
     <select id="kinect_image_type" class="float-right" style="font-size: 11pt;">
       <option value="/openni/rgb/image_color/compressed">Color Image</option>
       <option value="/openni/rgb/image_mono/compressed">Mono Image</option>
       <option value="/openni/ir/image_raw/compressed">IR</option>
     </select>
+    {% endif %}
   </h3>
+
+  {% if showOptions %}
   <div class="card-body">
     <b class="text-info">Subscriptions:</b>
     <div class="custom-control custom-checkbox">
@@ -27,9 +34,11 @@
       <label class="custom-control-label" for="zone_detection_image">Zone detection</label>
     </div>
   </div>
+  {% endif %}
 
-  <canvas id="kinect_image" style="max-width:none" width="640" height="480"></canvas>
+  <canvas id="{{ id }}" style="max-width:none" width="640" height="480"></canvas>
 
+  {% if showOptions %}
   <ul class="list-group list-group-flush mt-0">
     <li class="list-group-item">
       <div class="row">
@@ -48,4 +57,7 @@
       <input type="range" min="1" max="1" value="1" class="slider" id="kinect_image_delay" style="width: 100%;">
     </li>
   </ul>
+  {% endif %}
 </div>
+
+{%- endmacro %}
