Dialog console now working.

--- a/src/dashboard/src/devine_dashboard/html/demo/demo.html
+++ b/src/dashboard/src/devine_dashboard/html/demo/demo.html
@@ -22,6 +22,6 @@
         {{ camera_macro.camera('Objects segmentation', 'segmentation_feed') }}
     </div>
     <div class="dialog">
-        {{ console_macro.console('Dialog', false) }}
+        {{ console_macro.console('Dialog', false, true) }}
     </div>
 </div>
