--- a/src/dashboard/src/devine_dashboard/html/demo/demo.html
+++ b/src/dashboard/src/devine_dashboard/html/demo/demo.html
@@ -6,7 +6,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Connection to ROS lost.</h5>
+                <h5 class="modal-title">Connection to ROS lost</h5>
             </div>
             <div class="modal-body">
                 Trying to reconnect in <b><span id="connection-timeout"></span></b> sec...
